--- a/Calculator.html
+++ b/Calculator.html
@@ -28,7 +28,7 @@
     />
     <meta
       property="og:image"
-      content="https://yektaulas.com/maas-kur-hesaplayici/backgroun-image.jpg"
+      content="https://yektaulas.com/maas-kur-hesaplayici/background-image.jpg"
     />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Maaş &amp; Kur Hesaplayıcı" />
@@ -38,7 +38,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://yektaulas.com/maas-kur-hesaplayici/backgroun-image.jpg"
+      content="https://yektaulas.com/maas-kur-hesaplayici/background-image.jpg"
     />
     <script type="application/ld+json">
       {
@@ -90,7 +90,7 @@
 
       body {
         min-height: 100vh;
-        background-image: url(./backgroun-image.jpg);
+        background-image: url(./background-image.jpg);
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
