--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <!-- Sidebar -->
 
       <div class="sidebar">
-        <div class="fixedSidebar fixedSidebarLeft">
+        <div class="fixedSidebar fixedSidebarLeft active">
           <a href="#calculator" class="sidebarItem" data-tooltip="Hesaplayıcı">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -137,7 +137,7 @@
             </svg>
           </a>
 
-          <a href="" class="buttonTrigger" data-tooltip="Gizle">
+          <a href="" class="buttonTrigger active" data-tooltip="Göster">
             <svg
               version="1.1"
               id="Layer_1"
