add detailed explanations and transparency sections in about, privacy, and terms pages

--- a/about.html
+++ b/about.html
@@ -42,6 +42,12 @@
             görebilir ve kararını daha sağlıklı temellere dayandırabilir.
           </p>
           <p>
+            Sayfanın amacı, finansal okuryazarlığı destekleyen pratik bir
+            karşılaştırma sunmaktır. Buradaki bilgiler bir yatırım veya
+            danışmanlık önerisi değildir; kullanıcıya karar sürecinde şeffaf
+            bir çerçeve sağlamayı hedefler.
+          </p>
+          <p>
             Uygulama finansal tavsiye vermez; amaç, kamuya açık veri kaynaklarından
             faydalanarak şeffaf bir karşılaştırma sunmaktır. Hesaplama sonuçları
             bilgilendirme amaçlıdır ve kullanıcıya yönlendirici bir taahhüt içermez.
@@ -52,6 +58,18 @@
             <li>Şirket içi zam görüşmesi yapan çalışanlar.</li>
             <li>Gelirini döviz veya enflasyon bazında kıyaslamak isteyen herkes.</li>
           </ul>
+          <h3>Şeffaflık ve İçerik Yaklaşımı</h3>
+          <p>
+            Maaş pazarlığı çoğu zaman yalnızca yüzdesel artış üzerinden
+            değerlendirilir. Bu araç, kullanıcıyı tek bir metrik yerine birden
+            fazla göstergeye bakmaya teşvik eder. Nominal ve reel artışı
+            aynı tabloda sunarak “gerçek farkı” görünür kılar.
+          </p>
+          <p>
+            İçerik, genel kullanıcı kitlesinin anlayabileceği netlikte
+            hazırlanır. Terimler gerektiğinde basit örneklerle açıklanır ve
+            hesaplamaların sınırlılıkları açıkça belirtilir.
+          </p>
           <h3>Veri Kaynakları ve Yöntem</h3>
           <p>
             Kur verileri Avrupa Merkez Bankası (ECB) verilerini sunan Frankfurter
@@ -59,15 +77,42 @@
             kullanıcının belirleyebileceği bir alan olarak sunulur.
           </p>
           <p>
+            Resmi kaynaklar:
+            <a
+              href="https://www.frankfurter.app/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Frankfurter API</a
+            >
+            (ECB kur verileri),
+            <a
+              href="https://data.tuik.gov.tr/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >TÜİK</a
+            >
+            (enflasyon).
+          </p>
+          <p>
             Kur karşılaştırmaları tek bir günün değerlerine değil, son 12 ayın
             ortalamasına dayandırılır. Böylece dalgalanmalardan bağımsız, daha
             dengeli bir kıyaslama sağlanır.
+          </p>
+          <p>
+            Hesaplamalar tarayıcıda yapılır ve kullanıcı girdileri sunucuya
+            gönderilmez. Bu yaklaşım, hem hız hem de gizlilik açısından daha
+            güvenli bir deneyim sunar.
           </p>
           <h3>Güncelleme ve Sorumluluk</h3>
           <p>
             İçerik ve hesaplama yöntemi belirli aralıklarla güncellenir.
             Kullanıcıların önemli kararlar öncesinde resmi kaynakları ve
             uzman görüşlerini dikkate alması önerilir.
+          </p>
+          <p>
+            Bu sayfa, uygulamanın şeffaflık taahhüdünü göstermek için düzenli
+            olarak gözden geçirilir. Geri bildirimler, doğruluğu ve açıklığı
+            artırmak amacıyla değerlendirilir.
           </p>
         </section>
       </main>
