--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
             </div>
           </section>
           <!-- Real Purchasing Power Table -->
-          <section class="card results-card">
+        <section class="card results-card">
             <h2
               title="Nominal zam oranını; enflasyona, USD/TRY ve EUR/TRY değişimine göre
               karşılaştırır."
@@ -391,6 +391,92 @@
             </p>
           </section>
         </div>
+        <section id="info-content" class="card info-card longform">
+          <article>
+            <h2>Reel Maaş ve Alım Gücü Hakkında Bilmeniz Gerekenler</h2>
+            <p>
+              Maaş görüşmelerinde en sık duyduğumuz ifade “yüzde kaç zam
+              alıyorum?” olur. Ancak gerçek cevap, yalnızca zam oranında değil,
+              o zammın satın alma gücüne nasıl yansıdığında gizlidir. Reel maaş
+              kavramı, gelirinizin enflasyon ve döviz kurları karşısındaki
+              gerçek değerini gösterir. Bu sayfa, maaşınızdaki değişimi daha
+              sağlıklı yorumlamanız için temel kavramları kısa ama net şekilde
+              açıklar.
+            </p>
+            <h3>Nominal Zam vs. Reel Zam</h3>
+            <p>
+              Nominal zam, maaşınızdaki sayısal artıştır. Örneğin 20.000 TL’den
+              26.000 TL’ye çıkmanız %30 nominal zam anlamına gelir. Reel zam ise
+              bu artışın enflasyon etkisinden arındırılmış halidir. Enflasyonun
+              yüksek olduğu dönemlerde nominal zam cazip görünse bile market,
+              kira veya ulaşım gibi temel harcamaların artışını karşılamayabilir.
+            </p>
+            <p>
+              Bir zam “kağıt üzerinde” yüksek görünse de reel alım gücü aynı
+              kalabilir ya da düşebilir. Çünkü fiyatlar da aynı dönemde
+              yükselir. Örneğin enflasyon %35 iken %30 zam almanız, reel olarak
+              yaklaşık %5 alım gücü kaybı anlamına gelir. Bu nedenle maaş
+              görüşmelerinde sadece yüzdelik artışa değil, enflasyonla
+              kıyaslanmış reel sonuca bakmak daha sağlıklı bir yaklaşımdır.
+            </p>
+            <ul class="info-list">
+              <li>Nominal zam: Maaşınızın TL cinsinden artış oranı.</li>
+              <li>Reel zam: Enflasyondan arındırılmış gerçek artış.</li>
+              <li>
+                Yüksek enflasyon dönemlerinde reel zam sıfıra yaklaşabilir.
+              </li>
+            </ul>
+            <h3>Enflasyon Maaşınızı Nasıl Eritir?</h3>
+            <p>
+              Enflasyon, fiyatların genel seviyesinin artmasıdır. Türkiye’de
+              bu artış genellikle TÜFE (Tüketici Fiyat Endeksi) ile ölçülür.
+              TÜFE, bir tüketim sepetindeki ürün ve hizmetlerin ortalama
+              fiyat değişimini gösterir. Maaşınız sabit kalsa da, sepetin fiyatı
+              yükseldiği için aynı para daha az ürün almanıza neden olur.
+            </p>
+            <p>
+              Reel alım gücünü anlamanın pratik yolu, gelirinizin enflasyon
+              oranının üzerinde artıp artmadığına bakmaktır. Enflasyon %40 iken
+              maaşınız %40 artıyorsa reel alım gücünüz korunmuş sayılır; daha
+              düşük bir artış ise alım gücü kaybı yaratır. Bu yüzden düzenli
+              aralıklarla enflasyon oranlarını takip etmek, maaş beklentilerinizi
+              daha gerçekçi hale getirir.
+            </p>
+            <p>
+              Maaş &amp; Kur Hesaplayıcı bu noktada, nominal artışı enflasyonla
+              karşılaştırıp reel farkı net şekilde gösterir. Böylece maaş
+              değişiminin “gerçek etkisini” sayısal olarak görürsünüz.
+            </p>
+            <h3>Döviz Kuru ve Maaş İlişkisi</h3>
+            <p>
+              Türkiye’de döviz kurları, ithal ürünlerden teknoloji harcamalarına
+              kadar birçok kalemi etkiler. EUR ve USD’deki artışlar, sadece
+              yurt dışı alışverişlerini değil, temel tüketim fiyatlarını da
+              yükseltebilir. Bu nedenle maaşınız TL cinsinden artsa bile döviz
+              karşısındaki değeri düşebilir.
+            </p>
+            <p>
+              Özellikle dövizle fiyatlanan sektörlerde çalışanlar veya gelir
+              hedefi yabancı para birimiyle belirlenen profesyoneller için
+              USD/TRY ve EUR/TRY hareketleri kritik önemdedir. Maaşınızın döviz
+              karşılığındaki değeri azalırsa, uluslararası standartlarda alım
+              gücünüz geriler. Bu da eğitim, teknoloji, tatil gibi döviz
+              etkisine açık harcamalarda hissedilir.
+            </p>
+            <p>
+              Bu sayfadaki hesaplama aracı, maaşınızın döviz kurlarındaki
+              yıllık değişimle birlikte nasıl bir tablo ortaya koyduğunu
+              gösterir. Böylece sadece TL bazlı değil, döviz bazlı reel
+              karşılaştırma yapabilirsiniz.
+            </p>
+            <p>
+              Özetle, sağlıklı bir maaş değerlendirmesi için üç başlığı birlikte
+              okumak gerekir: nominal zam, enflasyon ve döviz kuru. Bu üçlü
+              perspektif, size “gerçek maaşınızı” görme imkanı sağlar ve
+              pazarlık sürecinde daha güçlü bir temel sunar.
+            </p>
+          </article>
+        </section>
         <!--
         <aside class="ad-slot ad-slot-between" aria-label="Reklam alanı">
           Adsense manuel reklam kodunu buraya yerleştirin
@@ -454,7 +540,20 @@
               değişim.
             </li>
             <li>
-              <strong>Veri kaynağı:</strong> ECB Frankfurter API (kur), TÜİK
+              <strong>Veri kaynağı:</strong>
+              <a
+                href="https://www.frankfurter.app/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Frankfurter API</a
+              >
+              (ECB kur verileri),
+              <a
+                href="https://data.tuik.gov.tr/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >TÜİK</a
+              >
               (enflasyon).
             </li>
           </ul>
@@ -489,6 +588,34 @@
             <p>
               Hayır. Bu araç bilgilendirme amaçlıdır; yasal veya finansal
               danışmanlık yerine geçmez.
+            </p>
+          </div>
+          <div class="faq-item">
+            <h3>Reel zam oranı nasıl hesaplanıyor?</h3>
+            <p>
+              Nominal zam oranı, enflasyon oranından arındırılır. Böylece
+              maaşınızdaki artışın gerçek alım gücüne etkisi görülür.
+            </p>
+          </div>
+          <div class="faq-item">
+            <h3>Enflasyon değerini değiştirebilir miyim?</h3>
+            <p>
+              Evet. Yıllık enflasyon alanına dilediğiniz oranı girerek farklı
+              senaryoları karşılaştırabilirsiniz.
+            </p>
+          </div>
+          <div class="faq-item">
+            <h3>Kur verisi geçici olarak alınamazsa ne olur?</h3>
+            <p>
+              Kur verisi alınamadığında tablo güncellenmez ve yeniden denemeniz
+              istenir. Hesaplama yapılabilmesi için güncel kur verisi gerekir.
+            </p>
+          </div>
+          <div class="faq-item">
+            <h3>Yan haklar ve vergiler hesaplamaya dahil mi?</h3>
+            <p>
+              Hayır. Bu araç yalnızca brüt/net maaş değişimini ve kur-enflasyon
+              etkisini gösterir; yan haklar ve vergi dilimleri dışındadır.
             </p>
           </div>
         </section>
