--- a/privacy.html
+++ b/privacy.html
@@ -49,10 +49,27 @@
           </p>
           <h3>Çerezler ve Yerel Depolama</h3>
           <p>
-            Uygulama, işlevsellik için zorunlu olmayan çerezler kullanmaz.
-            Yalnızca kur bilgisinin kısa süreli tutulması için tarayıcı oturum
-            belleği kullanılabilir. Bu veri kişisel değildir ve sayfayı
-            yenilediğinizde yenilenebilir.
+            Uygulama, işlevsellik için zorunlu olmayan birinci taraf çerezler
+            kullanmaz. Yalnızca kur bilgisinin kısa süreli tutulması için
+            tarayıcı oturum belleği kullanılabilir. Bu veri kişisel değildir
+            ve sayfayı yenilediğinizde yenilenebilir.
+          </p>
+          <h3>Reklam Hizmetleri ve Üçüncü Taraf Çerezler</h3>
+          <p>
+            Sayfada üçüncü taraf reklam hizmetleri (Google AdSense) kullanılabilir.
+            Bu servisler, ilgi alanına yönelik reklam göstermek için çerezler
+            veya benzer teknolojiler kullanabilir. Bu veriler, ilgili
+            sağlayıcının gizlilik politikaları kapsamında işlenir.
+          </p>
+          <p>
+            Google reklamları hakkında ayrıntılı bilgi ve çerez tercihleri için
+            <a
+              href="https://policies.google.com/technologies/ads"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Google Reklam Politikaları</a
+            >
+            sayfasını inceleyebilirsiniz.
           </p>
           <h3>Üçüncü Taraf Hizmetleri</h3>
           <p>
@@ -60,6 +77,17 @@
             Frankfurter API üzerinden alınır. Bu entegrasyon, kullanıcı
             bilgilerinin paylaşılmasını gerektirmez ve yalnızca kamuya açık
             finans verileri kullanılır.
+          </p>
+          <h3>Veri Minimizasyonu ve Güvenlik</h3>
+          <p>
+            Uygulama, yalnızca hesaplama için gerekli minimum veriyi işler ve
+            kişisel veri toplamayı amaçlamaz. Sunucu tarafında kullanıcıya ait
+            bir profil oluşturulmaz ve kimlik belirleyici veri talep edilmez.
+          </p>
+          <p>
+            Güvenlik önlemleri kapsamında, sayfa yalnızca HTTPS üzerinden
+            erişilebilir şekilde yayınlanır ve veri iletimi şifreli olarak
+            gerçekleşir.
           </p>
           <h3>Güncelleme ve İletişim</h3>
           <p>
