--- a/terms.html
+++ b/terms.html
@@ -51,6 +51,30 @@
             hesaplamalar yaklaşık sonuçlar üretir. Gelecekteki ekonomik değişimler
             nedeniyle hesaplanan değerler farklılık gösterebilir.
           </p>
+          <p>
+            Bu nedenle uygulamadan çıkan sonuçlar tek başına karar verme aracı
+            olarak kullanılmamalıdır. Kullanıcı, kendi finansal koşullarını ve
+            resmi verileri ayrıca değerlendirmelidir.
+          </p>
+          <h3>Kullanıcı Yükümlülükleri</h3>
+          <p>
+            Uygulama, yalnızca kişisel değerlendirme amaçlı kullanılmalıdır.
+            Hizmeti kötüye kullanmak, sayfayı bozmak veya veri kaynaklarına
+            zarar vermeye yönelik eylemler yasaktır. Kullanıcı, geçerli
+            mevzuata uygun hareket etmekle yükümlüdür.
+          </p>
+          <h3>Fikri Mülkiyet</h3>
+          <p>
+            Sayfadaki tasarım, metin ve görsel içerikler geliştiriciye aittir
+            veya ilgili lisanslar kapsamında kullanılmaktadır. İzinsiz kopyalama
+            veya ticari amaçlarla çoğaltma yapılamaz.
+          </p>
+          <h3>Üçüncü Taraf Bağlantıları</h3>
+          <p>
+            Uygulama, bilgi amaçlı olarak üçüncü taraf sitelere bağlantı
+            verebilir. Bu sitelerin içerik ve gizlilik politikalarından
+            geliştirici sorumlu değildir.
+          </p>
           <h3>Uygulama Değişiklikleri</h3>
           <p>
             Araç ve içerik üzerinde önceden bildirim olmaksızın değişiklik
@@ -61,6 +85,12 @@
             Uygulama kullanımından doğabilecek doğrudan veya dolaylı zararlardan
             geliştirici sorumlu tutulamaz. Önemli finansal kararlar öncesinde
             resmi kaynaklara ve uzman görüşlerine başvurmanız önerilir.
+          </p>
+          <h3>Uyuşmazlık ve Geçerlilik</h3>
+          <p>
+            Bu koşulların bir bölümünün geçersiz sayılması, diğer hükümleri
+            geçersiz kılmaz. Uyuşmazlık durumunda yürürlükteki Türkiye
+            mevzuatı uygulanır.
           </p>
         </section>
       </main>
