add blog navigation links and new blog articles

--- a/about.html
+++ b/about.html
@@ -29,6 +29,7 @@
         </header>
         <nav class="page-nav" aria-label="Sayfa bağlantıları">
           <a href="index.html">Hesaplayıcı</a>
+          <a href="blog/index.html">Blog</a>
           <a href="privacy.html">Gizlilik</a>
           <a href="terms.html">Kullanım Şartları</a>
         </nav>
