--- a/index.html
+++ b/index.html
@@ -90,6 +90,20 @@
               />
             </svg>
           </a>
+          <a href="blog/index.html" class="sidebarItem" data-tooltip="Blog">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="200"
+              height="200"
+              viewBox="0 0 24 24"
+            >
+              <path
+                fill="#6b7280"
+                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
+              />
+              <path fill="#6b7280" d="M14 17H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z" />
+            </svg>
+          </a>
           <a href="#about" class="sidebarItem" data-tooltip="Hakkında">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -202,6 +216,7 @@
         </div>
         <ul>
           <li><a href="#calculator">Hesaplayıcı</a></li>
+          <li><a href="blog/index.html">Blog</a></li>
           <li><a href="#how-it-works">Nasıl Çalışır?</a></li>
           <li><a href="#method">Hesaplama Yöntemi</a></li>
           <li><a href="#faq">SSS</a></li>
@@ -251,7 +266,7 @@
                     type="text"
                     inputmode="numeric"
                     pattern="[0-9.]*"
-                    placeholder="28,735"
+                    placeholder="28,075"
                   />
                   <span class="suffix">₺</span>
                 </div>
